--- a/torpedo/pom.xml
+++ b/torpedo/pom.xml
@@ -14,5 +14,17 @@
 	      <version>2.7</version>
 	      <scope>compile</scope>
 	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.2</version>
+		</dependency>
+	    
 	</dependencies>
+	
+	
+
 </project>
+
